# vulcan

./: .gitignore  404.html  Dockerfile.dataanalysis  EVALUATION_CLEANUP_SUMMARY.md  README.md  code_mindmap.mermaid  config.yaml  coverage.xml  create_splits.py  debug_user_counts.py  demo_exploration.py  docker-compose.yml  ecosystem.config.js  experiment_log.txt  experiment_runner.py  generate_src_docs.py  index.html  launch_production.sh  load_goodreads_to_qdrant.py  main_mcts.py  mkdocs.yml  monitor_experiment.py  pyproject.toml  requirements.txt  run_experiment.py  run_mcts_experiment.py  src_documentation.md  src_documentation_with_prompts.md  start_api_server.py  start_vulcan.py  strategy_optimization_analysis.md  test_baseline_tuning.py  test_cluster_recommendation_evaluation.py  test_file_based_system.py  test_recommendation_evaluation.py  thoughts.md
agentic/: README.md
architecture/: index.html
baselines/: __init__.py  base_baseline.py  baseline_evaluator.py  lightfm_baseline.py  popularity_baseline.py  random_baseline.py
coding_utils/: safe_delete.py
config/: OAI_CONFIG_LIST.json  default.yaml  dev.yaml  final.yaml  logging.yaml  vulcan.yaml
configs/: 01_baseline.yaml  02_high_exploration.yaml  03_high_exploitation.yaml  04_large_population.yaml  05_high_mutation.yaml  06_large_scale_ucb_experiment.yaml  config.yaml  vulcan.yaml
core/: visualization.py
data/: README.md  __init__.py  cache_metadata.py  clean_data.py  config.yaml  data_splits.py  generate_cv_splits.py  generate_splits.py  goodreads_cleaning.py  goodreads_fingerprinting.py  merge_databases.py
data_curation/: README.md  run.py
data_schema/: index.html
docs/: architecture.md  context.md  core_mission.md  data_schema.md  experiments.md  index.md  project_status_report.md  setup.md  test.md
examples/: comprehensive_cv_experiment.py  focused_cv_experiment.py  run_autonomous_fe.py  run_cold_start_vulcan.py  run_full_experiment.py  test_llm_audit.py  test_minimal_experiment.py
experiments/: baseline_fold_metrics.py  baseline_scores.json  compute_baselines.py
generated_prompts/: CandidateFeature.schema.json  DataRepresenter.txt  Hypothesis.schema.json  Hypothesizer.txt  PatternSeeker.txt  QuantitativeAnalyst.txt  data_representer.txt  engineer_agent.txt  feature_engineer.txt  optimization_agent.txt  pattern_seeker.txt  quantitative_analyst.txt  strategist_agent.txt
prompts/: data_thinker_prompt.txt  hypothesis_prompt.txt  ideation_pass1_prompt.txt  realization_prompt.txt  reflection_prompt.txt
scripts/: 01_curate_goodreads.sql  aggregate_agent_plots.py  benchmark_runner.py  check_lightfm_openmp.py  clear_views_except_interactions.py  create_interactions_view.sql  drop_useless_tables.py  dump_agent_prompts.py  dump_json_schemas.py  inspect_cv_splits.py  launch_dashboard.py  manual_reflection_handover_demo.py  preprocess_cv_folds_remove_bad_timestamps.py  queue_final_experiments.py  run_ablation.py  run_curation.py  run_experiment.py  run_queue.py  setup_and_test_feature_realization.sh  setup_config.py  setup_views.py  test_feature_optimization_pipeline.py  (+14 more)
(+473 files in other folders)
